Fix dark mode styling, clarify unpack instructions

--- a/_includes/0mhz.css
+++ b/_includes/0mhz.css
@@ -772,6 +772,6 @@ font-weight: 600;
   background-color: #141414;
   }
   pre, code {
-    background-color: transparent;      
+    background-color: #222;      
   }
 }
